# DevTools

./: README.md
Dynamic/: CMakeLists.txt  README.md
Dynamic/Application/: Application.c  CMakeLists.txt
Dynamic/Shell/: CMakeLists.txt
Dynamic/Wrapper/: CMakeLists.txt  DynamicLib.c  DynamicLib.h
Modularizing/: CMakeLists.txt
Modularizing/Application/: Application.c  CMakeLists.txt
Modularizing/Module/: CMakeLists.txt
Shared/: CMakeLists.txt
Shared/Application/: Application.c  CMakeLists.txt
Shared/Module/: CMakeLists.txt  Module.h
SimpleApplication/: Application.c  CMakeLists.txt  Module.c
Windows/Application/: CMakeLists.txt  Static.c
Windows/Dynamic/: CMakeLists.txt  Dynamic.c
Windows/Wrapper/: CMakeLists.txt  Wrapper.c  Wrapper.h
